--- a/style.css
+++ b/style.css
@@ -99,7 +99,69 @@ button {
 
 /* ------------ STORE ------------ */
 .store {
-  height: 92vh;
+  max-height: 92vh;
+  background-color: #EEE;
+  overflow-y: auto;
+}
+
+.sectionStore {
+  background-color: white;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.containerImg {
+  height: 75%;
+  border-radius: 0.4rem;
+}
+
+.sectionStore img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.4rem;
+}
+
+.sectionStore h2 {
+  margin: 1rem;
+  border-bottom: 1px solid gray;
+}
+
+.container_Product {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 0.6fr);
+  gap: 2vh;
+}
+
+.containerTargetItem {
+  width: 20vw;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0.4rem;
+  box-shadow: 2px 2px 5px 4px  rgba(0, 0, 0, 0.1);
+  border-radius: 0.4rem; 
+}
+
+.containerTargetItem h2 {
+  text-align: center;
+  white-space: break-spaces;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.targetProps {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 /* ------------ LIST ASIDE ------------ */
