--- a/style.css
+++ b/style.css
@@ -149,6 +149,11 @@ button, .containerTargetItem {
   border-radius: 0.4rem; 
 }
 
+.containerTargetItem:hover {
+  background-color: var(--soft-green);
+  color: white;
+}
+
 .containerTargetItem h2 {
   text-align: center;
   white-space: break-spaces;
