--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
   --soft-green: #abc27088;
   --green: #ABC270;
+  --dark-green: #9db16a;
   --yellow: #F5D547;
   --yellow-hover: #f0c91e;
   --orange: #FDA769;
@@ -274,4 +275,59 @@ button, .containerTargetItem {
 
 .delete {
   background-color: var(--orange);
+}
+
+/* ------------ MEDIA QUERYS ------------ */
+@media screen and (max-width: 2000px) {
+  .container_Product {
+    grid-template-columns: repeat(4, 0.6fr);
+  }
+
+  .containerTargetItem {
+    width: 15vw; 
+  }
+}
+@media screen and (max-width: 1280px) {
+  .container_Product {
+    grid-template-columns: repeat(4, 0.6fr);
+  }
+
+  .containerTargetItem {
+    width: 15vw; 
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .container_Product {
+    grid-template-columns: repeat(2, 0.6fr);
+  }
+  
+  .containerTargetItem {
+    width: 30vw; 
+  }
+}
+
+@media screen and (max-width: 744px) {
+  .container_Product {
+    grid-template-columns: repeat(1, 0.6fr);
+  }
+  
+  .containerTargetItem {
+    width: 65vw; 
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+  border-radius: 0.4rem;
+  background-color: #FFF;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--green);
+  border-radius: 0.4rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--dark-green);
 }
